@@ -953,13 +953,34 @@ class ModelStorage(Model):
                     env['active_id'] = record.id
                     domain = freeze(PYSONDecoder(env).decode(pyson_domain))
                     domains[domain].append(record)
+                # Select strategy depending if it is closer to one domain per
+                # record or one domain for all records
+                if len(domains) > len(records) * 0.5:
+                    # Do not use IN_MAX to let spaces for the pyson domain
+                    in_max = Transaction().database.IN_MAX
+                    count = in_max / 10
+                    new_domains = {}
+                    for sub_domains in grouped_slice(domains.keys(), count):
+                        grouped_domain = ['OR']
+                        grouped_records = []
+                        for d in sub_domains:
+                            sub_records = domains[d]
+                            grouped_records.extend(sub_records)
+                            relations = relation_domain(field, sub_records)
+                            if len(relations) > in_max:
+                                break
+                            grouped_domain.append(
+                                [('id', 'in', [r.id for r in relations]), d])
+                        new_domains[freeze(grouped_domain)] = grouped_records
+                    else:
+                        domains = new_domains
             else:
                 domains[freeze(field.domain)].extend(records)
 
             for domain, sub_records in domains.iteritems():
                 validate_relation_domain(field, sub_records, Relation, domain)
 
-        def validate_relation_domain(field, records, Relation, domain):
+        def relation_domain(field, records):
             if field._type in ('many2one', 'one2many', 'many2many', 'one2one'):
                 relations = set()
                 for record in records:
@@ -971,6 +992,10 @@ class ModelStorage(Model):
             else:
                 # Cache alignment is not a problem
                 relations = set(records)
+            return relations
+
+        def validate_relation_domain(field, records, Relation, domain):
+            relations = relation_domain(field, records)
             if relations:
                 for sub_relations in grouped_slice(relations):
                     sub_relations = set(sub_relations)
