@@ -1,3 +1,4 @@
+* Improve validation of PYSON domain
 * Use JSON canonical form for Dict value
 * Remove rules on user
 * Add monetary formatting to language
